2002-11-18  Glynn Foster  <glynn.foster@sun.com>

        * logview.c: (SetDefaultUserPrefs): Add /var/log/sys.log to
        list of possible logs to open. Apply duct tape to bug that
        I don't have time to look at.

2002-10-17  Kjartan Maraas  <kmaraas@gnome.org>

	* about.c: Unref the logo pixbuf. Fixing a leak.
	
2002-08-29  Glynn Foster  <glynn.foster@sun.com>

	* gnome-system-log-security.in: Default session to true, otherwise
	user can't launch it when console helper is enabled.

2002-08-29  Glynn Foster  <glynn.foster@sun.com>

	* actions.c: (apply_actions): Fix another case of 'logview'. [sigh]

2002-08-29  Glynn Foster  <glynn.foster@sun.com>

	* gnome-system-log-security.in: Point to gnome-system-log instead
	of logview. Thanks to Frederic for pointing this out.

2002-08-21  Glynn Foster  <glynn.foster@sun.com>

	* help/C/gnome-system-log-C.xml, gnome-system-log.omf: Updates
	from HEAD.

2002-08-09  Glynn Foster  <glynn.foster@sun.com>

	* gnome-system-log.1: Update man page.

2002-07-24  Deepa Natarajan  <deepa.natarajan@wipro.com>

	* actions.c: Pass the command to execute twice for execlp (),
	so that the action happens. Fixes bug# 88207.

2002-07-08  Laavanya K R <laavanya.gopalan@wipro.com>

        * actions.c: Modified exec_action_in_db() to execute "action"
        by a combination of fork() and execlp() calls instead of
        executing through system().  There is a potential of Time of
        Check and Time of Use (TOCTOU) issues with system() since
        shell is spawned first and command's executed after a small
        time gap. Fixes #87110.

2002-07-05  Glynn Foster  <glynn.foster@sun.com>

        * gnome-system-log.desktop.in: s/DocPath/X-GNOME-DocPath.
        Now conforms to spec.

2002-06-19  Deepa Natarajan  <deepa.natarajan@wipro.com>

	* actions.c: Change the windows to dialog boxes. Set
     	atk relation between entry box and label, set mnemonics,
     	set default button, change title of dialog to "Actions",